My cart page (Update)

--- a/Views/my-cart.html
+++ b/Views/my-cart.html
@@ -67,11 +67,60 @@
     <main>
         <div class="main-position">
             <div class="cart-product-card">
-
+                <div class="cart-product-card-img">
+                    <img src="../imgs/D_NQ_NP_795131-MLB53305424740_01.jpg" alt="">
+                </div>
+                <div class="cart-product-card-text">
+                    <p>Turbina Roletada Gtx3576r T3 A/r 0.63 - Garrett</p>
+                    <h2>R$ 22.215</h2>
+                </div>
             </div>
 
             <div class="cart-price-card">
+                <form action="">
+                    <div class="card-price-title">
+                        <h2>Resumo do pedido</h2>
+                    </div>
 
+                    <div class="card-input-cupom">
+                        <label for="cupom">Cupom de desconto</label>
+                        <input type="text" name="cupom" id="">
+                    </div>
+                    
+
+                    <div class="card-price-title">
+                        <h2>Calcular frete</h2>
+                    </div>
+
+                    <div class="card-input-frete">
+                        <input type="number" name="frete" id="" class="cep-number">
+                        <input type="button" value="Calcular" class="cep-number-btn">
+                    </div>
+
+                    <p class="frete-ex">Ex: 12345-678</p>
+
+                    <div class="frete-value">
+                        <p>Valor do frete:</p>
+                        <label for="frete">Não calculado</label>
+                    </div>
+                    
+                    <div class="card-price-title">
+                        <h2>Valor total</h2>
+                    </div>
+
+                    <div class="card-price-end">
+                        <h2>R$ 22.215</h2>
+                        <p>A vista no pix ou boleto</p>
+
+                        <h2>R$ 23.410</h2>
+                        <p>em até x12 de R$1.950,83 sem juros</p>
+                    </div>
+
+                    <div class="finish-order-btn">
+                        <input type="submit" value="Finalizar pedido">
+                    </div>
+                    
+                </form>
             </div>
         </div>
     </main>
