--- a/Views/purchase-thanks.html
+++ b/Views/purchase-thanks.html
@@ -71,7 +71,21 @@
             </div>
 
             <div class="thanks-card">
-                
+                <div class="thanks-card-title-img">
+                    <img src="../imgs/logo-loja.png" alt="">
+                </div>
+
+                <div class="thanks-card-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu ac tortor dignissim convallis. Iaculis at erat pellentesque adipiscing commodo elit at imperdiet. Neque convallis a cras semper auctor neque. Nisi scelerisque eu ultrices vitae auctor. Lectus mauris ultrices eros in cursus turpis massa tincidunt dui. Lectus nulla at volutpat diam ut.</p>
+                </div>
+
+                <div class="thanks-card-btn">
+                    <a href="../Views/traking-page.html">Rastrear meu pedido <i class="fa-solid fa-location-dot"></i></a>
+                </div>
+
+                <div class="thanks-card-btn">
+                    <a href="../Views/index.html">Voltar a pagina inicial <i class="fa-solid fa-arrow-left"></i></a>
+                </div>
             </div>
         </div>
     </main>
