--- a/Views/traking-page.html
+++ b/Views/traking-page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
     <link rel="icon" type="image/x-icon" href="../imgs/logo header img.png">
     <title>RASTREAR MEU PEDIDO</title>
 </head>
+
 <body>
     <header class="headercolor">
 
@@ -66,12 +68,48 @@
 
     <main>
         <div class="main-position">
-            <div class="cart-product-card">
+            <div class="order-product-card">
+                <div class="order-product-card-img">
+                    <img src="../imgs/D_NQ_NP_795131-MLB53305424740_01.jpg" alt="">
+                </div>
+
+                <div class="order-product-card-text">
+                    <span>
+                        <h5>Pedido:</h5>
+                        <p>1212SPRMGD2023</p>
+                    </span>
+                    <span>
+                        <h5>Valor:</h5>
+                        <p>R$ 28.600</p>
+                    </span>
+                </div>
+
+                <div class="order-product-list-btn">
+
+                    <div class="action-btn" onclick="dropdownproductlist()">
+                        <span>Listar produtos <i class="fa-solid fa-chevron-down"></i></span>
+                    </div>
+
+                </div>
 
             </div>
 
-            <div class="cart-price-card">
-                
+            <!-- <div class="dropdown-product-list">
+
+                <div class="cart-product-card">
+                    <div class="cart-product-card-img">
+                        <img src="../imgs/D_NQ_NP_795131-MLB53305424740_01.jpg" alt="">
+                    </div>
+                    <div class="cart-product-card-text">
+                        <p>Turbina Roletada Gtx3576r T3 A/r 0.63 - Garrett</p>
+                        <h2>R$ 22.215</h2>
+                    </div>
+                </div>
+
+            </div> -->
+
+            <div class="order-track-card">
+
             </div>
         </div>
     </main>
@@ -115,4 +153,5 @@
     <script src="../js/menuheaderToggle.js"></script>
     <script src="../js/productpage.js"></script>
 </body>
+
 </html>
