list product order

--- a/Views/index.html
+++ b/Views/index.html
@@ -52,7 +52,7 @@
 
             <div class="btnws">
                 <a href="">Mecânica</a>
-                <a href="">Iterior</a>
+                <a href="">Interior</a>
                 <a href="">Exterior</a>
                 <a href="">Rodas</a>
             </div>
