--- a/Views/mecanica-produto1.html
+++ b/Views/mecanica-produto1.html
@@ -53,7 +53,7 @@
 
             <div class="btnws">
                 <a href="">Mecânica</a>
-                <a href="">Iterior</a>
+                <a href="">Interior</a>
                 <a href="">Exterior</a>
                 <a href="">Rodas</a>
             </div>
