--- a/Views/my-cart.html
+++ b/Views/my-cart.html
@@ -50,7 +50,7 @@
 
             <div class="btnws">
                 <a href="">Mecânica</a>
-                <a href="">Iterior</a>
+                <a href="">Interior</a>
                 <a href="">Exterior</a>
                 <a href="">Rodas</a>
             </div>
@@ -117,7 +117,7 @@
                     </div>
 
                     <div class="finish-order-btn">
-                        <input type="submit" value="Finalizar pedido">
+                        <a href="purchase-thanks.html">Finalizar pedido</a>
                     </div>
                     
                 </form>
