--- a/Views/traking-page.html
+++ b/Views/traking-page.html
@@ -52,7 +52,7 @@
 
             <div class="btnws">
                 <a href="">Mecânica</a>
-                <a href="">Iterior</a>
+                <a href="">Interior</a>
                 <a href="">Exterior</a>
                 <a href="">Rodas</a>
             </div>
@@ -94,7 +94,7 @@
 
             </div>
 
-            <!-- <div class="dropdown-product-list">
+            <div class="dropdown-product-list">
 
                 <div class="cart-product-card">
                     <div class="cart-product-card-img">
@@ -106,7 +106,7 @@
                     </div>
                 </div>
 
-            </div> -->
+            </div>
 
             <div class="order-track-card">
 
