--- a/Views/index.html
+++ b/Views/index.html
@@ -82,26 +82,26 @@
 
             <div class="slide">
                 <img src="../imgs/index slide-2.jpg" alt="" srcset="">
-                <div class="text">Seu carro do jeito que voçê sempre quis!</div>
-                <div class="subtext">Temos o maior estoque de peças e acessórios</div>
+                <div class="text">Peças de alta perfomace!</div>
+                <div class="subtext">Seu carro mais potente do que nunca</div>
             </div>
 
             <div class="slide">
                 <img src="../imgs/index slide-3.jpg" alt="" srcset="">
-                <div class="text">Seu carro do jeito que voçê sempre quis!</div>
-                <div class="subtext">Temos o maior estoque de peças e acessórios</div>
+                <div class="text">Maiores marcas do mercado!</div>
+                <div class="subtext">Tenha a cofiabilidade das maiores marcas</div>
             </div>
 
             <div class="slide">
                 <img src="../imgs/index slide-4.jpg" alt="" srcset="">
-                <div class="text">Seu carro do jeito que voçê sempre quis!</div>
-                <div class="subtext">Temos o maior estoque de peças e acessórios</div>
+                <div class="text">Para todo tipo de projeto!</div>
+                <div class="subtext">Rally, Track day, Pro street, Drift, Drag e muito mais</div>
             </div>
 
             <div class="slide">
                 <img src="../imgs/index slide-5.jpg" alt="" srcset="">
-                <div class="text">Seu carro do jeito que voçê sempre quis!</div>
-                <div class="subtext">Temos o maior estoque de peças e acessórios</div>
+                <div class="text">Alta qualidade de acabamentos!</div>
+                <div class="subtext">Acabamentos de alcantara, couro, veludo e muito mais</div>
             </div>
 
         </div>
