--- a/Views/loginuser.html
+++ b/Views/loginuser.html
@@ -38,8 +38,8 @@
                     </div>
 
                     <div class="checkbox">
-                       <input type="checkbox" name="" id="" value="" class="checkTPP" required>
-                        <label for="" class="checkTPPtext">Lembre de mim</label><br> 
+                       <input type="checkbox" name="" id="checkTPPlogin" class="checkTPP" required>
+                        <label for="checkTPPlogin" class="checkTPPtext">Lembre de mim</label><br> 
                     </div>
 
                     <input type="submit" value="Login" class="submitbtn">
