--- a/Views/mechanic-parts-page.html
+++ b/Views/mechanic-parts-page.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/cssreset.css">
     <link rel="stylesheet" href="../css/cssheader.css">
     <link rel="stylesheet" href="../css/cssfooter.css">
-    <link rel="stylesheet" href="../css/purchase-thanks.css">
+    <link rel="stylesheet" href="../css/cssindex.css">
     <link rel="stylesheet" type="text/css" href="../css/all.min.css">
     <link rel="icon" type="image/x-icon" href="../imgs/logo header img.png">
-    <title>OBRIGADO(A) POR COMPRAR</title>
+    <title>Peças de Mecanica</title>
 </head>
 <body>
     <header class="headercolor">
@@ -63,32 +63,7 @@
 
 
     </header>
-
-    <main>
-        <div class="main-position">
-            <div class="purchase-thanks-img">
-                <img src="../imgs/order finish img.png" alt="" srcset="">
-            </div>
-
-            <div class="thanks-card">
-                <div class="thanks-card-title-img">
-                    <img src="../imgs/logo-loja.png" alt="">
-                </div>
-
-                <div class="thanks-card-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu ac tortor dignissim convallis. Iaculis at erat pellentesque adipiscing commodo elit at imperdiet. Neque convallis a cras semper auctor neque. Nisi scelerisque eu ultrices vitae auctor. Lectus mauris ultrices eros in cursus turpis massa tincidunt dui. Lectus nulla at volutpat diam ut.</p>
-                </div>
-
-                <div class="thanks-card-btn">
-                    <a href="../Views/my orders-page.html">Meuz pedidos <i class="fa-solid fa-location-dot"></i></a>
-                </div>
-
-                <div class="thanks-card-btn">
-                    <a href="../Views/index.html">Voltar a pagina inicial <i class="fa-solid fa-arrow-left"></i></a>
-                </div>
-            </div>
-        </div>
-    </main>
+    
 
     <footer class="footercolor">
 
@@ -128,5 +103,6 @@
     <script src="https://kit.fontawesome.com/792acc9727.js" crossorigin="anonymous"></script>
     <script src="../js/menuheaderToggle.js"></script>
     <script src="../js/productpage.js"></script>
+    
 </body>
 </html>
