--- a/Views/my orders-page.html
+++ b/Views/my orders-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/cssreset.css">
     <link rel="stylesheet" href="../css/cssheader.css">
     <link rel="stylesheet" href="../css/cssfooter.css">
-    <link rel="stylesheet" href="../css/traking-page.css">
+    <link rel="stylesheet" href="../css/my orders-page.css">
     <link rel="stylesheet" type="text/css" href="../css/all.min.css">
     <link rel="icon" type="image/x-icon" href="../imgs/logo header img.png">
     <title>RASTREAR MEU PEDIDO</title>
@@ -18,7 +18,7 @@
 
         <div class="logo">
 
-            <img src="../imgs/logo-loja.png" alt="MOD TUNER">
+            <a href="index.html"><img src="../imgs/logo-loja.png" alt="MOD TUNER"></a>
 
         </div>
 
@@ -76,11 +76,15 @@
                 <div class="order-product-card-text">
                     <span>
                         <h5>Pedido:</h5>
-                        <p>1212SPRMGD2023</p>
+                        <p> 1212SPRMGD2023</p>
                     </span>
                     <span>
                         <h5>Valor:</h5>
-                        <p>R$ 28.600</p>
+                        <p> R$ 28.600</p>
+                    </span>
+                    <span>
+                        <h5>Data da Compra:</h5>
+                        <p> 20/08/2024</p>
                     </span>
                 </div>
 
@@ -106,11 +110,28 @@
                     </div>
                 </div>
 
+                <div class="cart-product-card">
+                    <div class="cart-product-card-img">
+                        <img src="../imgs/120VN215011_L1600_5e3cec6d-38bb.jpg" alt="">
+                    </div>
+                    <div class="cart-product-card-text">
+                        <p>Jogo de rodas American racing VN215 - 16"</p>
+                        <h2>R$ 4.910</h2>
+                    </div>
+                </div>
+
+                <div class="cart-product-card">
+                    <div class="cart-product-card-img">
+                        <img src="../imgs/BMW-E30-M3-FRONT-WILWOOD-BIG-BRA.jpg" alt="">
+                    </div>
+                    <div class="cart-product-card-text">
+                        <p>Kit freio a disco dianteiro 310mm aro 16 - WilWood</p>
+                        <h2>R$ 1.475</h2>
+                    </div>
+                </div>
+
             </div>
 
-            <div class="order-track-card">
-
-            </div>
         </div>
     </main>
 
