--- a/Views/adduser.html
+++ b/Views/adduser.html
@@ -44,8 +44,8 @@
                     </div>
 
                     <div class="checkbox">
-                       <input type="checkbox" name="" id="" value="" class="checkTPP" required>
-                        <label for="" class="checkTPPtext">Li e concordo com os termos de <a href="">Politíca e Privacidade</a></label><br> 
+                       <input type="checkbox" name="" id="checkTPPok" class="checkTPP" required>
+                        <label for="checkTPPok" class="checkTPPtext">Li e concordo com os termos de <a href="">Politíca e Privacidade</a></label><br> 
                     </div>
 
                     <input type="submit" value="Cadastre-se" class="submitbtn">
