--- a/Views/mecanica-produto1.html
+++ b/Views/mecanica-produto1.html
@@ -19,7 +19,7 @@
 
         <div class="logo">
 
-            <img src="../imgs/logo-loja.png" alt="MOD TUNER">
+            <a href="index.html"><img src="../imgs/logo-loja.png" alt="MOD TUNER"></a>
 
         </div>
 
