--- a/css/adduserform.css
+++ b/css/adduserform.css
@@ -106,6 +106,28 @@ body{
     margin-bottom: 10px;
 }
 
+.checkTPP{
+    display: none;
+}
+.checkbox input+label:before {
+    content: '';
+    width: 20px;
+    height: 20px;
+    background-color: #5c5c5c;
+    border-radius: 4px;
+    display: inline-block;
+    margin: 0 10px -3px 0;
+    transition-duration: 0.4;
+    cursor: pointer;
+}
+
+.checkbox input:checked+label:before {
+    background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 10 10'%3E%3Cg class='nc-icon-wrapper' stroke-width='1' fill='%23555555'%3E%3Cpath fill='none' stroke='%23FFFFFF' stroke-linecap='round' stroke-linejoin='round' stroke-miterlimit='10' data-cap='butt' d='M2.83 4.72l1.58 1.58 2.83-2.83'/%3E%3C/g%3E%3C/svg%3E");
+    background-position: center;
+    border: none;
+    background-color: #0267ff;
+}
+
 
 
 @media only screen and (min-width: 375px){
